--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             justify-content: center;
             height: 100vh;
             background-color: #f0f0f0;
-            overflow: hidden; /* Verhindert unnötiges Scrollen */
+            overflow: hidden;
         }
 
         h1 {
@@ -128,7 +128,6 @@
     </div>
 
     <script>
-        // Funktion, um das datetime-local Feld mit der aktuellen Zeit ohne zusätzliche Anpassung zu füllen
         function setCurrentDateTime() {
             const now = new Date();
             const localISOString = new Date(now.getTime() - (now.getTimezoneOffset() * 60000)).toISOString();
@@ -160,19 +159,38 @@
         });
 
         function calculateForecast(timestamp) {
-            const startValue = 2790.000;
-            const dailyRates = [6.209, 5.585, 4.657, 3.208, 1.552, 0.802, 0.776, 0.776, 2.005, 3.104, 4.812, 6.209];
+            const startValue = 2795.650;
+            const monthlyGrowth = [
+                192.4758595, 156.3866359, 144.3568947, 96.23792977,
+                48.11896489, 24.05948244, 24.05948244, 24.05948244,
+                60.14870611, 96.23792977, 144.3568947, 192.4758595
+            ];
+
             const date = new Date(timestamp);
-            const month = date.getMonth();
+            const year = date.getFullYear();
+            const month = date.getMonth(); // 0 = January, 11 = December
             const dayOfMonth = date.getDate();
             const hours = date.getHours();
 
-            const dailyRate = dailyRates[month];
-            const daysElapsed = dayOfMonth - 1;
-            const totalDailyValue = daysElapsed * dailyRate;
-            const hourlyValue = (hours / 24) * dailyRate;
+            let total = startValue;
 
-            return (startValue + totalDailyValue + hourlyValue).toFixed(3);
+            // Add up growth for complete months up to the current month
+            for (let m = 0; m < month; m++) {
+                const daysInMonth = new Date(year, m + 1, 0).getDate();
+                total += (monthlyGrowth[m] / daysInMonth) * daysInMonth;
+            }
+
+            // Calculate daily growth for the current month
+            const daysInCurrentMonth = new Date(year, month + 1, 0).getDate();
+            const dailyRate = monthlyGrowth[month] / daysInCurrentMonth;
+
+            // Add growth for complete days in the current month
+            total += dailyRate * (dayOfMonth - 1);
+
+            // Add growth for the hours of the current day
+            total += dailyRate * (hours / 24);
+
+            return total.toFixed(3);
         }
 
         function loadDataAndDisplayTable() {
