--- a/public/index.html
+++ b/public/index.html
@@ -116,8 +116,8 @@
             <thead>
                 <tr>
                     <th>Datum</th>
-                    <th>Ist-Wert</th>
-                    <th>Soll-Wert</th>
+                    <th>Zählerstand</th>
+                    <th>Prognose</th>
                     <th>Aktionen</th>
                 </tr>
             </thead>
