--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gas-Zählerstand Eingabe</title>
+    <title>Gas-Verbrauch</title>
     <style>
         /* Grundlegende Styles für das Layout */
         body, html {
@@ -102,7 +102,7 @@
     </style>
 </head>
 <body>
-    <h1>Gas-Zählerstand Eingabe</h1>
+    <h1>Gas-Verbrauch</h1>
     <form id="gasForm">
         <label for="timestamp">Datum & Uhrzeit:</label>
         <input type="datetime-local" id="timestamp" name="timestamp">
