--- a/public/index.html
+++ b/public/index.html
@@ -86,18 +86,18 @@
         }
 
         .delete-button {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 24px;
-            height: 24px;
-            border-radius: 50%;
-            background-color: red;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-            line-height: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #ccc; /* Unauffälliges Grau für Hintergrund */
+    color: #666; /* Dunkleres Grau für den Text */
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 0;
         }
     </style>
 </head>
